fixed layout bug with main-grid

--- a/css/main.css
+++ b/css/main.css
@@ -445,6 +445,7 @@ address {
 }
 .main-grid section {
   margin-inline: auto;
+  width: 100%;
 }
 @media (min-width: 63rem) {
   .main-grid {
@@ -456,7 +457,8 @@ address {
   }
   .main-grid section {
     grid-column: 2/span 1;
-    margin-inline: var(--margin-lg) var(--margin-sm);
+    width: initial;
+    margin-inline: var(--margin-lg) var(--margin-lg);
   }
 }
 @media (min-width: 108rem) {
